<?xml version="1.0" encoding="utf-8"?>
<!-- Options menu for the EditorActivity -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditorActivity">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_action_done"
        android:title="@string/action_save"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_main"
        android:icon="@drawable/ic_action_menu"
        android:title="@string/menu"
        android:visible="true"
        app:showAsAction="always">
        <menu>

            <item
                android:id="@+id/action_delete"
                android:title="@string/action_delete"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>