<?xml version="1.0" encoding="utf-8"?>
<!-- Options menu for the ItemActivity -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ItemActivity">
    <item
        android:id="@+id/menu_main"
        android:icon="@drawable/ic_action_menu"
        android:title="@string/menu"
        android:visible="true"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_insert_dummy_data"
                android:title="@string/action_insert_dummy_data"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_delete_all_entries"
                android:title="@string/action_delete_all_entries"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>